Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-3457

qpid::Msg::str() method not exported

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.13
    • 0.11
    • C++ Broker, C++ Client
    • None

    Description

      Trunk r1161742 added a Msg::str() method to cpp/src/qpid/Msg.cpp - this method is not marked with an extern decorator, so it's not visible outside qpidcommon (where Msg.cpp is built) on Windows. This causes build errors on Windows, with unresolved external references to the method.

      Attachments

        Activity

          People

            aconway Alan Conway
            shuston Stephen D. Huston
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: