QPID-3457: qpid::Msg::str() method not exported

- Added the QPID_COMMON_EXTERN declaration to Msg.h
- Removed a spurious #include "Msg.h" from qpid/types/Variant.cpp

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1162233 13f79535-47bb-0310-9956-ffa450edef68